--- a/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeSystem.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeSystem.mdx
@@ -102,10 +102,13 @@ curl -X POST "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/\$exp
 
 </TabItem>
 </Tabs>
-
 Replace `[tenant]` with your tenant name and `[project]` with your project ID.
 
 This command sends a POST request to invoke the `$export` operation at the system level to export Patient and Observation resources.
+<div className="border border-orange-100" />
+
+
+
 
 
 ## Error Handling
