--- a/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteType.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteType.mdx
@@ -56,5 +56,7 @@ curl -X DELETE "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Pat
 
 </TabItem>
 </Tabs>
-
 Replace `[tenant]` with your tenant name and `[project]` with your project ID.
+<div className="border border-orange-100" />
+
+
