--- a/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryInstance.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryInstance.mdx
@@ -65,8 +65,10 @@ curl -X GET "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patien
 
 </TabItem>
 </Tabs>
-
 Replace `[tenant]` with your tenant name and `[project]` with your project ID.
+<div className="border border-orange-100" />
+
+
 
 
 ## Error Handling
