--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Patch.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Patch.mdx
@@ -93,8 +93,10 @@ curl -X PATCH "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Pati
 
 </TabItem>
 </Tabs>
-
 Replace `[tenant]` with your tenant name and `[project]` with your project ID.
+<div className="border border-orange-100" />
+
+
 
 ## Error Handling
 
