--- a/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
@@ -72,8 +72,10 @@ curl -X GET "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4?_type=
 
 </TabItem>
 </Tabs>
-
 Replace `[tenant]` with your tenant name and `[project]` with your project ID.
+<div className="border border-orange-100" />
+
+
 
 ## Error Handling
 
