--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Update.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Update.mdx
@@ -116,8 +116,10 @@ curl -X PUT "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patien
 
 </TabItem>
 </Tabs>
-
 Replace `[tenant]` with your tenant name and `[project]` with your project ID.
+<div className="border border-orange-100" />
+
+
 
 ## Error Handling
 
