--- a/frontend/packages/website/docs/Authentication/Client Registration.mdx
+++ b/frontend/packages/website/docs/Authentication/Client Registration.mdx
@@ -306,10 +306,10 @@ Public clients requires user consent for requested scopes. The access policy use
 
 - [ClientApplication Resource Reference](/docs/API/FHIR/Model/Resources/ClientApplication) - Complete field definitions
 - [Scopes Documentation](/docs/Authentication/Scopes) - OAuth scope syntax and usage
-- [Client Credentials Grant](/docs/Authentication/OpenID%20Connect/Client%20Credentials) - Machine-to-machine authentication
-- [Authorization Code Flow](/docs/Authentication/OpenID%20Connect/Authorization%20Code) - User authentication flow
-- [SMART on FHIR](/docs/Authentication/SMART%20on%20FHIR) - Healthcare-specific authorization
-- [Access Control](/docs/category/access-control) - Configuring client permissions
+- [Client Credentials Grant](/docs/Authentication/OpenID%20Connect/client-credentials) - Machine-to-machine authentication
+- [Authorization Code Flow](/docs/Authentication/OpenID%20Connect/authorization-code) - User authentication flow
+- [SMART on FHIR](/docs/Authentication/smart-on-fhir) - Healthcare-specific authorization
+- [Access Control](/docs/Authorization/Intro) - Configuring client permissions
 
 ## Support
 
@@ -319,3 +319,4 @@ For questions or issues with client registration:
 2. Check the [OpenID Connect specification](https://openid.net/specs/openid-connect-core-1_0.html)
 3. Consult the [OAuth 2.0 specification](https://datatracker.ietf.org/doc/html/rfc6749)
 4. Contact Haste Health support
+5. Open an issue on our [GitHub repository](https://github.com/HasteHealth/HasteHealth/issues)
