move project next to tenant

--- a/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteInstance.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteInstance.mdx
@@ -50,7 +50,7 @@ console.log('Patient deleted successfully');
 Delete a Patient resource using cURL:
 
 ```bash
-curl -X DELETE "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
+curl -X DELETE "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4/Patient/12345" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
 
