--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Patch.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Patch.mdx
@@ -79,7 +79,7 @@ console.log('Patched Patient:', patchedPatient);
 Patch a Patient resource using cURL with JSON Patch:
 
 ```bash
-curl -X PATCH "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
+curl -X PATCH "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4/Patient/12345" \
      -H "Content-Type: application/json-patch+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN" \
      -d '[
