--- a/frontend/packages/website/docs/Authentication/Client Registration.mdx
+++ b/frontend/packages/website/docs/Authentication/Client Registration.mdx
@@ -130,7 +130,7 @@ console.log('Client Secret:', createdClient.secret);
 Create a ClientApplication using cURL:
 
 ```bash
-curl -X POST "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/ClientApplication" \
+curl -X POST "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4/ClientApplication" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN" \
      -d '{
