--- a/frontend/packages/website/docs/Authentication/OpenID Connect/Client Credentials.mdx
+++ b/frontend/packages/website/docs/Authentication/OpenID Connect/Client Credentials.mdx
@@ -49,7 +49,7 @@ sequenceDiagram
     
     Storage->>App: Return credentials
     
-    App->>AuthServer: POST /w/{tenant}/api/v1/oauth/token
+    App->>AuthServer: POST /w/{tenant}/oauth/api/v1/token
     Note over App,AuthServer: Content-Type: application/x-www-form-urlencoded<br/>grant_type=client_credentials<br/>client_id=backend-service-id<br/>client_secret=SECRET<br/>scope=system/*.read system/*.write
     
     AuthServer->>AuthServer: Validate client_id<br/>Verify client_secret<br/>Check client permissions<br/>Validate requested scopes
@@ -62,7 +62,7 @@ sequenceDiagram
     rect rgb(240, 248, 255)
         Note over App,API: Accessing Protected Resources
         
-        App->>API: GET /w/{tenant}/api/v1/{project}/fhir/r4/Patient<br/>Authorization: Bearer ACCESS_TOKEN
+        App->>API: GET /w/{tenant}/{project}/api/v1/fhir/r4/Patient<br/>Authorization: Bearer ACCESS_TOKEN
         
         API->>API: Validate token<br/>Check expiration<br/>Verify scopes<br/>Verify system/*.read scope
         
@@ -76,7 +76,7 @@ sequenceDiagram
         
         App->>App: Check token expiry<br/>(e.g., < 5 min remaining)
         
-        App->>AuthServer: POST /w/{tenant}/api/v1/oauth/token<br/>(request new token)
+        App->>AuthServer: POST /w/{tenant}/oauth/api/v1/token<br/>(request new token)
         
         AuthServer->>App: Return new access token
         
@@ -91,7 +91,7 @@ sequenceDiagram
 The application directly requests an access token from the token endpoint using its client credentials:
 
 ```http
-POST /w/{tenant}/api/v1/oauth/token HTTP/1.1
+POST /w/{tenant}/oauth/api/v1/token HTTP/1.1
 Host: api.haste.health
 Content-Type: application/x-www-form-urlencoded
 
@@ -148,7 +148,7 @@ Use the access token to call FHIR APIs:
 
 **Request:**
 ```http
-GET /w/{tenant}/api/v1/{project}/fhir/r4/Patient HTTP/1.1
+GET /w/{tenant}/{project}/api/v1/fhir/r4/Patient HTTP/1.1
 Host: api.haste.health
 Authorization: Bearer eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9...
 ```
