--- a/frontend/packages/website/docs/Authentication/OpenID Connect/Refresh Token.mdx
+++ b/frontend/packages/website/docs/Authentication/OpenID Connect/Refresh Token.mdx
@@ -57,7 +57,7 @@ sequenceDiagram
     App->>User: Redirect to authorization endpoint
     Note over App,User: /authorize?response_type=code<br/>client_id=app-id<br/>scope=openid offline_access patient/*.read<br/>code_challenge=CHALLENGE<br/>code_challenge_method=S256
     
-    User->>AuthServer: GET /w/{tenant}/api/v1/oauth/authorize
+    User->>AuthServer: GET /w/{tenant}/oauth/api/v1/authorize
     
     AuthServer->>User: Show login page
     User->>AuthServer: Enter credentials
@@ -68,7 +68,7 @@ sequenceDiagram
     
     App->>Storage: Retrieve code_verifier
     
-    App->>AuthServer: POST /w/{tenant}/api/v1/oauth/token
+    App->>AuthServer: POST /w/{tenant}/oauth/api/v1/token
     Note over App,AuthServer: grant_type=authorization_code<br/>code=AUTH_CODE<br/>code_verifier=VERIFIER<br/>client_id=app-id
     
     AuthServer->>AuthServer: Verify code_verifier<br/>SHA256 matches challenge
@@ -86,7 +86,7 @@ sequenceDiagram
         User->>App: Request patient data
         App->>App: Check token expiration
         
-        App->>API: GET /w/{tenant}/api/v1/{project}/fhir/r4/Patient<br/>Authorization: Bearer ACCESS_TOKEN
+        App->>API: GET /w/{tenant}/{project}/api/v1/fhir/r4/Patient<br/>Authorization: Bearer ACCESS_TOKEN
         
         API->>API: Validate access token<br/>Check expiration
         
@@ -102,7 +102,7 @@ sequenceDiagram
         
         App->>Storage: Retrieve refresh_token
         
-        App->>AuthServer: POST /w/{tenant}/api/v1/oauth/token
+        App->>AuthServer: POST /w/{tenant}/oauth/api/v1/token
         Note over App,AuthServer: Content-Type: application/x-www-form-urlencoded<br/>grant_type=refresh_token<br/>refresh_token=REFRESH_TOKEN<br/>client_id=app-client-id
         
         AuthServer->>AuthServer: Validate refresh token<br/>Check if revoked<br/>Verify client_id<br/>Generate new tokens
@@ -149,7 +149,7 @@ Refresh tokens are issued during the Authorization Code Grant with PKCE flow whe
 
 **Authorization Request (include offline_access):**
 ```http
-GET /w/{tenant}/api/v1/oauth/authorize?
+GET /w/{tenant}/oauth/api/v1/authorize?
   response_type=code&
   client_id=your-app-id&
   redirect_uri=https://yourapp.com/callback&
@@ -166,7 +166,7 @@ GET /w/{tenant}/api/v1/oauth/authorize?
 
 **Token Exchange Request:**
 ```http
-POST /w/{tenant}/api/v1/oauth/token
+POST /w/{tenant}/oauth/api/v1/token
 Content-Type: application/x-www-form-urlencoded
 
 grant_type=authorization_code&
@@ -204,7 +204,7 @@ When the access token expires, exchange the refresh token for a new access token
 
 **Request:**
 ```http
-POST /w/{tenant}/api/v1/oauth/token HTTP/1.1
+POST /w/{tenant}/oauth/api/v1/token HTTP/1.1
 Host: api.haste.health
 Content-Type: application/x-www-form-urlencoded
 
@@ -215,7 +215,7 @@ client_id=your-client-id
 
 **For Confidential Clients (with client_secret):**
 ```http
-POST /w/{tenant}/api/v1/oauth/token HTTP/1.1
+POST /w/{tenant}/oauth/api/v1/token HTTP/1.1
 Host: api.haste.health
 Content-Type: application/x-www-form-urlencoded
 Authorization: Basic base64(client_id:client_secret)
