--- a/frontend/packages/website/docs/Guides/Setting up CLI.mdx
+++ b/frontend/packages/website/docs/Guides/Setting up CLI.mdx
@@ -97,8 +97,8 @@ active_profile = "LOCAL_CLIENT"
 
 [[profiles]]
 name = "LOCAL_CLIENT"
-r4_url = "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4"
-oidc_discovery_uri = "https://api.haste.health/w/[tenant]/api/v1/[project]/oidc/.well-known/openid-configuration"
+r4_url = "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4"
+oidc_discovery_uri = "https://api.haste.health/w/[tenant]/[project]/api/v1/oidc/.well-known/openid-configuration"
 
 [profiles.auth.ClientCredentails]
 client_id = "cli"
