--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Create.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Create.mdx
@@ -89,7 +89,7 @@ console.log('Created Patient:', createdPatient);
 Create a Patient resource using cURL:
 
 ```bash
-curl -X POST "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient" \
+curl -X POST "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4/Patient" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN" \
      -d '{
