--- a/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteType.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteType.mdx
@@ -50,7 +50,7 @@ console.log('Matching Patient resources deleted');
 Conditionally delete Patient resources using cURL:
 
 ```bash
-curl -X DELETE "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient?identifier=http://example.org/fhir/ids|12345" \
+curl -X DELETE "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4/Patient?identifier=http://example.org/fhir/ids|12345" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
 
