--- a/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryInstance.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryInstance.mdx
@@ -58,7 +58,7 @@ console.log('History entries:', history.entry);
 Retrieve the history of a Patient resource using cURL:
 
 ```bash
-curl -X GET "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345/_history?_count=10" \
+curl -X GET "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4/Patient/12345/_history?_count=10" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
