--- a/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryType.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryType.mdx
@@ -57,7 +57,7 @@ console.log('History entries:', history.entry);
 Retrieve the history of all Patient resources using cURL:
 
 ```bash
-curl -X GET "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/_history?_count=20&_since=2025-01-01" \
+curl -X GET "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4/Patient/_history?_count=20&_since=2025-01-01" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
