--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Read.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Read.mdx
@@ -55,7 +55,7 @@ if (patient) {
 Read a Patient resource using cURL:
 
 ```bash
-curl -X GET "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
+curl -X GET "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4/Patient/12345" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
