--- a/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
@@ -65,7 +65,7 @@ const searchWithParsed = await client.search_system(
 Search across all resource types using cURL:
 
 ```bash
-curl -X GET "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4?_type=Patient,Observation&_lastUpdated=ge2025-01-01" \
+curl -X GET "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4?_type=Patient,Observation&_lastUpdated=ge2025-01-01" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
