--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Update.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Update.mdx
@@ -96,7 +96,7 @@ console.log('Updated Patient:', result);
 Update a Patient resource using cURL:
 
 ```bash
-curl -X PUT "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
+curl -X PUT "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4/Patient/12345" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN" \
      -d '{
